增加统计规则
