# docs/swagger.json
@@ -1553,6 +1553,40 @@
                 }
             }
         },
+        "/wtOutput/GetStatResult": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "WtOutput"
+                ],
+                "summary": "根据用户id查询统计结果",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "userId",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"查询成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/wtReports/createWtReports": {
             "post": {
                 "security": [
@@ -1901,8 +1935,13 @@
                         "in": "query"
                     },
                     {
-                        "type": "string",
-                        "name": "endTime",
+                        "type": "integer",
+                        "name": "endHour",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "endWeek",
                         "in": "query"
                     },
                     {
@@ -1929,8 +1968,13 @@
                         "in": "query"
                     },
                     {
-                        "type": "string",
-                        "name": "startTime",
+                        "type": "integer",
+                        "name": "startHour",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "startWeek",
                         "in": "query"
                     },
                     {
@@ -2178,6 +2222,11 @@
                         "in": "query"
                     },
                     {
+                        "type": "integer",
+                        "name": "userId",
+                        "in": "query"
+                    },
+                    {
                         "type": "string",
                         "name": "userName",
                         "in": "query"
@@ -2233,6 +2282,17 @@
         }
     },
     "definitions": {
+        "common.UserInfo": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "config.AliyunOSS": {
             "type": "object",
             "properties": {
@@ -2816,8 +2876,11 @@
                 "sendTo": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/wt.UserInfo"
+                        "$ref": "#/definitions/common.UserInfo"
                     }
+                },
+                "userId": {
+                    "type": "integer"
                 },
                 "userName": {
                     "type": "string"
@@ -2827,8 +2890,11 @@
         "request.WtRuleRes": {
             "type": "object",
             "properties": {
-                "endTime": {
-                    "type": "string"
+                "endHour": {
+                    "type": "integer"
+                },
+                "endWeek": {
+                    "type": "integer"
                 },
                 "id": {
                     "type": "integer"
@@ -2836,11 +2902,14 @@
                 "reporters": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/common.UserInfo"
                     }
                 },
-                "startTime": {
-                    "type": "string"
+                "startHour": {
+                    "type": "integer"
+                },
+                "startWeek": {
+                    "type": "integer"
                 },
                 "userId": {
                     "type": "integer"
@@ -3097,17 +3166,6 @@
             "properties": {
                 "key": {
                     "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "wt.UserInfo": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
