# model/common/common.go
@@ -1,0 +1,6 @@
+package common
+
+type UserInfo struct {
+	ID   uint   `json:"id" form:"id"`
+	Name string `json:"name"`
+}
